[package]
name = "tikv-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
futures = "0.3.16"
pest = "2.1.3"
pest_derive = "2.1.0"
rustyline = "8.2.0"
structopt = "0.3.22"
tikv-client = "0.1.0"
